// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton demo test skeleton demo: animation.md renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="arco-cell-group all-border-box"
    >
      <div
        class="cell-group-body bordered"
      >
        <div
          class="arco-cell all-border-box bordered"
        >
          <div
            class="arco-cell-inner"
          >
            <div
              class="cell-label"
            >
              <div
                class="cell-title"
              >
                show animation
              </div>
            </div>
            <div
              class="cell-content has-label"
            >
              <div
                aria-checked="true"
                aria-disabled="false"
                class="arco-switch all-border-box type-ios system-pc fully checked"
                role="switch"
                tabindex="0"
              >
                <div
                  class="arco-switch-inner"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="arco-cell all-border-box bordered"
        >
          <div
            class="arco-cell-inner"
          >
            <div
              class="cell-label"
            >
              <div
                class="cell-title"
              >
                type
              </div>
            </div>
            <div
              class="cell-content has-label"
            >
              <div
                class="arco-radio-group"
              >
                <div
                  aria-checked="true"
                  aria-disabled="false"
                  class="arco-radio shape-circle inline"
                  role="checkbox"
                  tabindex="0"
                >
                  <div
                    class="radio-icon checked"
                  >
                    <svg
                      class="arco-icon arco-icon-circle-checked "
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 1c-5 0-9 4-9 9s4 9 9 9 9-4 9-9-4-9-9-9zm4.9 6.3L10 13.2s0 .1-.1.1l-.6.7c-.1.1-.2.1-.3.2-.1 0-.3 0-.4-.1l-.6-.7-.1-.1-2.8-2.4c-.2-.2-.2-.5-.1-.7l.6-.7c.2-.2.5-.2.7-.1l2.5 2.1L13.5 6c.2-.2.5-.2.7-.1l.7.6c.1.3.2.6 0 .8z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                  <div
                    class="radio-text"
                  >
                    gradient
                  </div>
                </div>
                <div
                  aria-checked="false"
                  aria-disabled="false"
                  class="arco-radio shape-circle inline"
                  role="checkbox"
                  tabindex="0"
                >
                  <div
                    class="radio-icon"
                  >
                    <svg
                      class="arco-icon arco-icon-circle-unchecked "
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 19c-5 0-9-4-9-9s4-9 9-9 9 4 9 9-4 9-9 9zm0-17c-4.4 0-8 3.6-8 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="radio-text"
                  >
                    breath
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-skeleton"
      style="color: rgb(0, 0, 0);"
    >
      <div
        class="arco-skeleton-content"
      >
        <div
          class="arco-skeleton-item arco-skeleton-title arco-skeleton-animation-gradient"
          style="width: 40%;"
        />
        <div
          class="arco-skeleton-paragraph"
        >
          <div
            class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          />
          <div
            class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          />
          <div
            class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
            style="width: 60%;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demo test skeleton demo: avatar.md renders correctly 1`] = `
<DocumentFragment>
  <div
    class="arco-skeleton arco-skeleton-with-avatar"
  >
    <div
      class="arco-skeleton-item arco-skeleton-avatar arco-skeleton-animation-gradient"
    />
    <div
      class="arco-skeleton-content"
    >
      <div
        class="arco-skeleton-item arco-skeleton-title arco-skeleton-animation-gradient"
        style="width: 40%;"
      />
      <div
        class="arco-skeleton-paragraph"
      >
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demo test skeleton demo: custom.md renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="arco-cell-group all-border-box"
    >
      <div
        class="cell-group-body bordered"
      >
        <div
          class="arco-cell all-border-box bordered"
        >
          <div
            class="arco-cell-inner"
          >
            <div
              class="cell-label"
            >
              <div
                class="cell-title"
              >
                loading
              </div>
            </div>
            <div
              class="cell-content has-label"
            >
              <div
                aria-checked="true"
                aria-disabled="false"
                class="arco-switch all-border-box type-ios system-pc fully checked"
                role="switch"
                tabindex="0"
              >
                <div
                  class="arco-switch-inner"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-skeleton"
    >
      <div
        class="arco-skeleton-grid"
        style="margin-bottom: 20px;"
      >
        <div
          class="arco-skeleton-grid-item"
        >
          <div
            class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
          />
          <div
            class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
          />
        </div>
        <div
          class="arco-skeleton-grid-item"
        >
          <div
            class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
          />
          <div
            class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
          />
        </div>
        <div
          class="arco-skeleton-grid-item"
        >
          <div
            class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
          />
          <div
            class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
          />
        </div>
      </div>
      <div
        style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 20px;"
      >
        <div
          class="arco-skeleton-item arco-skeleton-avatar arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-node arco-skeleton-animation-gradient"
          style="border-radius: 10px;"
        >
          <div
            style="width: 250px; height: 50px;"
          />
        </div>
      </div>
      <div
        class="arco-skeleton-item arco-skeleton-title arco-skeleton-animation-gradient"
        style="width: 40%; margin-bottom: 20px;"
      />
      <div
        class="arco-skeleton-paragraph"
        style="margin-bottom: 20px;"
      >
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 100%;"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 100%;"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 100%;"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 80%;"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demo test skeleton demo: grid.md renders correctly 1`] = `
<DocumentFragment>
  <div
    class="arco-skeleton"
  >
    <div
      class="arco-skeleton-grid"
    >
      <div
        class="arco-skeleton-grid-item"
      >
        <div
          class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
        />
      </div>
      <div
        class="arco-skeleton-grid-item"
      >
        <div
          class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
        />
      </div>
      <div
        class="arco-skeleton-grid-item"
      >
        <div
          class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
        />
      </div>
      <div
        class="arco-skeleton-grid-item"
      >
        <div
          class="arco-skeleton-item arco-skeleton-grid-icon arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-grid-text arco-skeleton-animation-gradient"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`skeleton demo test skeleton demo: index.md renders correctly 1`] = `
<DocumentFragment>
  <div
    class="arco-skeleton"
  >
    <div
      class="arco-skeleton-content"
    >
      <div
        class="arco-skeleton-item arco-skeleton-title arco-skeleton-animation-gradient"
        style="width: 40%;"
      />
      <div
        class="arco-skeleton-paragraph"
      >
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
        />
        <div
          class="arco-skeleton-item arco-skeleton-paragraph-line arco-skeleton-animation-gradient"
          style="width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
